# hil

./: .gitattributes  .gitignore  .hilignore  .pre-commit-config.yaml  LICENSE  README.md  ato.yaml  cspell.json  pyproject.toml  trace.html
.github/workflows/: ato-build.yml  ci.yml  elec.yml  pre-commit.yml  pytest.yml
elec/layout/amplifier-4ch/: amplifier-4ch.kicad_pcb
elec/layout/analog-in/: analog-in.kicad_pcb
elec/layout/analog-in-4ch/: analog-in-4ch.kicad_pcb
elec/layout/analog-in-8ch/: analog-in-8ch.kicad_pcb
elec/layout/analog-in-isolated/: LV2842Kit.kicad_pro  analog-in-isolated.kicad_pcb  analog-in-isolated.kicad_pro
elec/layout/analog-out/: analog-out.kicad_pcb  analog-out.kicad_pro
elec/layout/analog-out-4ch/: amplifier-4ch.kicad_pro  analog-out-4ch.kicad_pcb
elec/layout/boost-converter/: boost-converter.kicad_pcb
elec/layout/buck-boost/: buck-boost.kicad_pcb  buck-boost.kicad_pro  fp-lib-table
elec/layout/cell/: cell.kicad_pcb
elec/layout/cellsim-8ch/: cellsim-8ch.kicad_pcb  cellsim-8ch.kicad_pro  fp-lib-table
elec/layout/cm4-example/: cm4-example.kicad_pcb  cm4-example.kicad_pro
elec/layout/coms-can-iso/: analog-in.kicad_pro  coms-can-iso.kicad_pcb  coms-can-iso.kicad_pro
elec/layout/controller-cm4/: analog-out-4ch.kicad_pro  cm4.kicad_pcb  cm4.kicad_pro  fp-lib-table  i2c-relay.kicad_pro  lv2842xlvddcr.kicad_pro  power-usbpd.kicad_pro  variable-resistor.kicad_pro
elec/layout/controller-esp32/: controller-esp32.kicad_pcb  controller-esp32.kicad_pro
elec/layout/ethernet/: ethernet.kicad_pcb
elec/layout/i2c-relay/: i2c-relay.kicad_pcb
elec/layout/isolator-24v-3v3/: isolator-24v-3v3.kicad_pcb  isolator-24v-3v3.kicad_pro
elec/layout/isolator-i2c/: analog-in.kicad_pro  isolator-i2c.kicad_pcb  isolator-i2c.kicad_pro
elec/layout/multiplexer-i2c-8ch/: multiplexer-i2c-8ch.kicad_pcb
elec/layout/power-usbpd/: power-usbpd.kicad_pcb  power-usbpd.kicad_pro
elec/layout/regulator/: regulator.kicad_pro
elec/layout/relay/: relay.kicad_pcb  relay.kicad_pro
elec/layout/space-bms-hil/: space-bms-hil.kicad_pcb  space-bms-hil.kicad_pro
elec/layout/variable-resistor/: variable-resistor.kicad_pcb
elec/src/: hil-blocks.ato  variable_load.ato
elec/src/blocks/: analog-in-4ch.ato  analog-in.ato  analog-out-4ch.ato  analog-out.ato  cellsim-8ch.ato  coms-adi-bms.ato  coms-can.ato  controller-cm4.ato  controller-esp32.ato  debug-saleae.ato  isolator-24v-3v3.ato  isolator-i2c.ato  multiplexer-i2c-8ch.ato  power-usbpd.ato  protection-tvs.ato  relay.ato  variable-resistor.ato
elec/src/components/: ADBMS6822.ato  DF13C_2P_1_25V.ato  Molex5026030270.ato  Molex5030912221.ato  Molex5051100492.ato  Molex5051101292.ato  PZ254-2-04-S.ato  YNR4030.ato  ads1115.ato  amplifier-4ch.ato  amplifier.ato  b1205s.ato  b2405s.ato  b2424s.ato  born_smbj26a.ato  cell.ato  current-sensor.ato  digital-regulator.ato  digitalBuck.ato  digitalLDO.ato  diodes_incorporated_dm_th8003s_ps13.ato  dosinconn_do_sin8010072.ato  dowo_smf33a.ato  ethernet.ato  hf_xiamen_hongfa_electroacoustic_hf115f_i0241h_s3a.ato  iso1640.ato  lucki_l327s400h11l.ato  mcp4725.ato  microchip_tech_mc_p2518f_dteqb_b.ato  microchip_tech_mc_p4728eun.ato  mwsa0402s.ato  nexperia_pe_sd1c_an215.ato  onsemi_mc33174d_r2g.ato  tca6408.ato  texas_instruments_bq25756r_rvr.ato  texas_instruments_cd74h_c4051p_wr.ato  texas_instruments_is_o1044b_dr.ato  texas_instruments_lm358d_r.ato  (+6 more)
firmware/: ADS1x15.py  asyncI2C.py  cell.py  cell_test_csv.py  mcp4725.py
software/hil/: README.md  dist_plugin.py  framework.py  polars_sandbox.py  pytest_plugin.py  scheduling.py  test_scheduler.py
software/httpdist_server/: README.md  models.py  server.py
software/httpdist_supervisor/: api.go  go.mod  main.go  session.go  util.go
software/scripts/: runtest.sh
tests/: conftest.py  test_any.py  test_demo.py  test_nothing.py  test_ray.py  test_record.py
tests/configs/: chunky-otter.json
tests/test_drivers/: test_aiosmbus2.py  test_cell.py
tests/test_framework/: test_any_ready.py  test_calibration.py  test_record.py
tests/test_utils/: test_composable_future.py  test_config.py  test_exception_table.py  test_pet_name.py
(+58 files in other folders)
