[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hil"
version = "0.1.0"
description = "atopile Hardware-in-the-Loop Testing Framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.115.8",
    "numpy>=2.2.2",
    "pathvalidate>=3.2.3",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-benchmark>=5.1.0",
    "pytest-html>=4.1.1",
    "pytest-timeout>=2.3.1",
    "ray[client,default]",
    "rich>=13.9.4",
    "smbus2>=0.5.0",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[project.entry-points."pytest11"]
hil-plugin = "hil.pytest_plugin"
dist-plugin = "hil.dist_plugin"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyinstrument>=5.0.1",
    "ruff>=0.9.6",
]

[tool.uv.sources]
# TODO: use released version (pending 3.13 support)
ray = [
    { url = "https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp313-cp313-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin'" },
    { url = "https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-3.0.0.dev0-cp313-cp313-manylinux2014_aarch64.whl", marker = "sys_platform != 'darwin'" },
]

[tool.hatch.build]
sources = ["software"]

[tool.hatch.build.targets.wheel]
packages = ["software/hil"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--html=artifacts/test-report.html",
    "--self-contained-html",
    "--color=yes",
]

[tool.ruff]
line-length = 88
